--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top menu">
             <div class="container-fluid">
                 <div class="mx-auto">
-                    <a class="navbar-brand neon  mx-auto" href="#">H&M (Hembras & Machos)</a>
+                    <a class="navbar-brand mx-auto" href="#"><img src="img/logo.png" alt="logo"></a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -25,12 +26,12 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0 neon">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#">Mujer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#">Hombre</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -80,7 +81,7 @@
             </button>
         </div>
         <div class="container">
-            <div class="row row-cols-1 row-cols-md-5" id="contenedor">
+            <div class="row row-cols-1 row-cols-md-5 my-4" id="contenedor">
 
             </div>
         </div>
