--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -25,19 +26,25 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0 neon">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent ps-4">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0 neon2">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Mujer</a>
+                            <a class="nav-link active mx-3" aria-current="page" href="#">Mujer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Hombre</a>
+                            <a class="nav-link active mx-3" aria-current="page" href="#">Hombre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active mx-3" aria-current="page" href="#"><i class="bi bi-person-circle"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active mx-3" aria-current="page" href="#"><i class="bi bi-bag-heart"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active mx-3" aria-current="page" href="#"><i class="bi bi-cart3"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active mx-3" aria-current="page" href="#"><i class="bi bi-chat-right-text"></i></a>
                         </li>
                     </ul>
                     <form class="d-flex">
